--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Huong's website</title>
     <link rel="icon" href="./img/code-pink.png" />
@@ -84,7 +87,8 @@
           >
             <h1 class="primary-heading">Hi, I'm Huong</h1>
             <h4 class="second-heading">
-              I'm an engineer with a great passion for medical data science and software development
+              I'm an engineer with a great passion for medical data science and
+              software development
             </h4>
           </div>
         </div>
@@ -96,7 +100,10 @@
             My works <img src="./img/project.png" alt="" />
           </h2>
           <p>
-            Here are a few projects I completed during my bachelor's study. Many projects cannot be shown on this website due to data protection and security reasons. Contact me if you want to know more about my projects!
+            Here are a few projects I completed during my bachelor's study. Many
+            projects cannot be shown on this website due to data protection and
+            security reasons. Contact me if you want to know more about my
+            projects!
             <strong
               ><a href="mailto:nguyenquynhhuong2305@gmail.com" class="blue-link"
                 >Email me.</a
@@ -185,26 +192,27 @@
             About me<img src="./img/it-girl.png" alt="" />
           </h2>
           <p>
-            Data scientist with a strong software development background, driven by a deep passion for medical technology. Experienced in developing software solutions and proficient in deep learning and image processing techniques. Strongly motivated to advance healthcare and improve patient outcomes. Excited to contribute to the intersection of data science, software development, and medical technology.
+            Data scientist with a strong software development background, driven
+            by a deep passion for medical technology. Experienced in developing
+            software solutions and proficient in deep learning and image
+            processing techniques. Strongly motivated to advance healthcare and
+            improve patient outcomes. Excited to contribute to the intersection
+            of data science, software development, and medical technology.
           </p>
           <div class="skills">
             <h4>
               My technical skills <img src="./img/code-pink.png" alt="" />
             </h4>
+            <p>Data Science: Python, PyTorch, Pandas, OpenCV</p>
             <p>
-              Data Science: Python, PyTorch, Pandas, OpenCV
-            </p>
-            <p>
-              Software Development: JavaScript, Python, PHP, Ruby, Java
-              ReactJS, AngularJS, NodeJS, MongoDB, MySQL
+              Software Development: JavaScript, Python, PHP, Ruby, Java ReactJS,
+              AngularJS, NodeJS, MongoDB, MySQL
             </p>
             <p>Other: Git, Jira, Bash script</p>
-            <h4>
-              My language skills <img src="./img/speak.png" alt="" />
-            </h4>
-            <p>English C1 </p>
-            <p>German B1 </p>
-            <p>Vietnamese Native </p>
+            <h4>My language skills <img src="./img/speak.png" alt="" /></h4>
+            <p>English C1</p>
+            <p>German B1</p>
+            <p>Vietnamese Native</p>
           </div>
         </div>
       </section>
@@ -217,19 +225,21 @@
           data-aos-duration="1500"
         >
           <h2 class="page-heading text-center">Work experience</h2>
-          
+
           <h3><img src="./img/exp.png" /> Franka Emika GmbH</h3>
           <h4>Technologies</h4>
           <p>ReactJS, Bash Script, JavaScript, C++, Haskell</p>
           <h4>Tasks</h4>
           <ul>
             <li>
-              Implement new features in "Desk" - a dashboard for controlling company’s robots
+              Implement new features in "Desk" - a dashboard for controlling
+              company’s robots
             </li>
+            <li>Perform tests on robots to check their behaviors</li>
             <li>
-              Perform tests on robots to check their behaviors
+              Modify robot settings to optimize robot functionalities while
+              still guaranteeing safety
             </li>
-            <li>Modify robot settings to optimize robot functionalities while still guaranteeing safety</li>
           </ul>
 
           <h3><img src="./img/exp.png" /> Urgrow GmbH</h3>
@@ -238,7 +248,8 @@
           <h4>Tasks</h4>
           <ul>
             <li>
-              Define concepts for data models based on mobile ap- plication needs and biological aspects
+              Define concepts for data models based on mobile ap- plication
+              needs and biological aspects
             </li>
             <li>
               Illustrate models, concepts, and their relationships us- ing UML
@@ -252,14 +263,14 @@
           <h4>Tasks</h4>
           <ul>
             <li>
-              Install, configure tools, and perform tests needed for Web-of-Things (WoT) projects in different OS
+              Install, configure tools, and perform tests needed for
+              Web-of-Things (WoT) projects in different OS
             </li>
-            <li>
-              Write bash scripts for automated deployment (CI/CD)
-            </li>
+            <li>Write bash scripts for automated deployment (CI/CD)</li>
             <li>Created bash scripts for automated deployment (CI/CD)</li>
             <li>
-              Participate in the configuration, development, and de- ployment of a Mendix-based application (collaborated with Siemens)
+              Participate in the configuration, development, and de- ployment of
+              a Mendix-based application (collaborated with Siemens)
             </li>
           </ul>
 
@@ -272,14 +283,11 @@
           <h4>Tasks</h4>
           <ul>
             <li>
-              Implement new features and convenient tools on the company’s dashboard
+              Implement new features and convenient tools on the company’s
+              dashboard
             </li>
-            <li>
-              Debug, refactor, and optimize existing features
-            </li>
-            <li>
-              Review and generate automated tests
-            </li>
+            <li>Debug, refactor, and optimize existing features</li>
+            <li>Review and generate automated tests</li>
             <li>Use Ruby, HTML, CSS, JavaScript, Amazon Web Service S3</li>
           </ul>
         </div>
