--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
           <h4>Tasks</h4>
           <ul>
             <li>
-              Define concepts for data models based on mobile ap- plication
+              Define concepts for data models based on mobile application
               needs and biological aspects
             </li>
             <li>
-              Illustrate models, concepts, and their relationships us- ing UML
+              Illustrate models, concepts, and their relationships using UML
             </li>
             <li>Test and implement databases using MongoDB and MySQL</li>
           </ul>
@@ -266,10 +266,9 @@
               Install, configure tools, and perform tests needed for
               Web-of-Things (WoT) projects in different OS
             </li>
-            <li>Write bash scripts for automated deployment (CI/CD)</li>
-            <li>Created bash scripts for automated deployment (CI/CD)</li>
+            <li>Create bash scripts for automated deployment (CI/CD)</li>
             <li>
-              Participate in the configuration, development, and de- ployment of
+              Participate in the configuration, development, and deployment of
               a Mendix-based application (collaborated with Siemens)
             </li>
           </ul>
@@ -317,9 +316,9 @@
               <img src="./img/linkedin.png" alt="" />
               <strong>
                 <a
-                  href="www.linkedin.com/in/huong-nguyen-tum"
+                  href="https://www.linkedin.com/in/huong-nguyen-820027123/"
                   class="white-link"
-                  >www.linkedin.com/in/huong-nguyen-tum</a
+                  >https://www.linkedin.com/in/huong-nguyen-820027123/</a
                 >
               </strong>
             </p>
