--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             projects!
             <strong
               ><a href="mailto:nguyenquynhhuong2305@gmail.com" class="blue-link"
-                >Email me.</a
+                >Email me</a
               ></strong
             >
           </p>
@@ -206,7 +206,7 @@
             <p>Data Science: Python, PyTorch, Pandas, OpenCV</p>
             <p>
               Software Development: JavaScript, Python, PHP, Ruby, Java ReactJS,
-              AngularJS, NodeJS, MongoDB, MySQL
+              AngularJS, NodeJS, MongoDB, MySQL, TypeScript
             </p>
             <p>Other: Git, Jira, Bash script</p>
             <h4>My language skills <img src="./img/speak.png" alt="" /></h4>
