--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <header class="carrot-section text-center" id="intro">
         <div class="intro">
           <div class="avatar-wrapper">
-            <img src="./img/web-ava.jpeg" alt="" class="avatar" />
+            <img src="./img/web-ava.jpg" alt="" class="avatar" />
           </div>
           <div
             class=""
